// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.net.grpc.server;

import "personalwebsite/app/app_info.proto";

option go_package = "personal-website-v2/go-data/net/grpc/server;server";

// Proto file describing the Call.

// The call info.
message CallInfo {
    // The unique ID to identify the call.
    string id = 1;

    // The app info.
    personalwebsite.app.AppInfo app = 2;

    // The app session ID.
    uint64 app_session_id = 3;

    // The gRPC server ID.
    uint32 grpc_server_id = 4;

    // The status of the request can be New(1), InProgress(2), Success(3), or Failure(4).
    CallStatusEnum.CallStatus status = 5;

    // The date and time (in microseconds) at which the request was started.
    int64 start_time = 6;

    // Optional. The date and time (in microseconds) at which the request was ended.
    optional int64 end_time = 7;

    // Optional. The elapsed time, in microseconds.
    optional int64 elapsed_time_us = 8;

    string full_method = 9;
    repeated string content_type = 10;
    repeated string user_agent = 11;

    // Optional.
    optional bool is_operation_successful = 12;

    // Optional. The gRPC status code (error code).
    optional uint32 status_code = 13;
}

// Container for enum describing the call status.
message CallStatusEnum {
    // The call status.
    enum CallStatus {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        NEW = 1;
        IN_PROGRESS = 2;
        SUCCESS = 3;
        FAILURE = 4;
    }
}
